--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,33 +1,36 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'Public Rest API for CRM'
+description: 'Updated: 2024-05-30'
 ---
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+## General API Information
 
-## Welcome
+-   The following base endpoints are available. Please use whichever works best for your setup:
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+    -   **[https://api.crmclick.io](https://api.crmclick.io)**
 
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+## HTTP Return Codes
 
-## Authentication
+-   HTTP `4XX` return codes are used for malformed requests; the issue is on the sender's side.
+-   HTTP `403` return code is used when the WAF Limit (Web Application Firewall) has been violated.
+-   HTTP `409` return code is used when a cancelReplace order partially succeeds. (i.e. if the cancellation of the order fails but the new order placement succeeds.)
+-   HTTP `429` return code is used when breaking a request rate limit.
+-   HTTP `418` return code is used when an IP has been auto-banned for continuing to send requests after receiving `429` codes.
+-   HTTP `5XX` return codes are used for internal errors; the issue is on Binance's side. It is important to **NOT** treat this as a failure operation; the execution status is **UNKNOWN** and could have been a success.
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+## Error Codes
 
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
+-   Any endpoint can return an ERROR
+
+Sample Payload below:
+
 ```
+{ "code":0, "msg":"Invalid symbol." }
+```
+
+## General Information on Endpoints
+
+-   For `GET` endpoints, parameters must be sent as a `query string`.
+-   For `POST`, `PUT`, and `DELETE` endpoints, the parameters may be sent as a `query string` or in the `request body` with content type `application/json`. You may mix parameters between both the `query string` and `request body` if you wish to do so.
+-   Parameters may be sent in any order.
+-   If a parameter sent in both the `query string` and `request body`, the `query string` parameter will be used.
